--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,5 +2,5 @@
 ---
 
 @import
-  "minima/skins/{{ site.minima.skin | default: 'classic' }}",
-  "minima/initialize";
+  "TinaLiu46.github.io/skins/{{ site.TinaLiu46.github.io.skin | default: 'classic' }}",
+  "TinaLiu46.github.io/initialize";
