--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,8 @@
----
----
+ ---
+  ---
 
-@import
-  "TinaLiu46.github.io/skins/{{ site.TinaLiu46.github.io.skin | default: 'classic' }}",
-  "TinaLiu46.github.io/initialize";
+  @import "minima";
+
+  a {
+    color: blue;
+  }
